# Teilice

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
teilice/: __init__.py  aperture.py  common.py  periodogram.py  tesscutimage.py  tessdata.py  tessextractor.py  tesslightcurve.py  tesstarget.py  utils.py  visual.py
teilice/tools/: __init__.py  period_finder.py  sa_photometry.py
