[build-system]
requires = ["setuptools","numpy >= 1.24","scipy >= 1.8.0",
            "matplotlib >= 3.4.1", "astropy >= 5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "Teilice"
version = "0.1"
authors = [
  { name="Liang Wang", email="wang.leon@gmail.com" },
]
description = "TESS Full Frame Image Photometry Package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/wangleon/Teilice"
Issues = "https://github.com/wangleon/Teilice/issues"
