[build-system]
requires = [
            "setuptools >= 75.3.2",
            ]
build-backend = "setuptools.build_meta"

[project]
name = "teilice"
version = "0.3"
authors = [
  { name="Liang Wang", email="wang.leon@gmail.com" },
]
description = "TESS Full Frame Image Photometry Package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "Apache-2.0" }

[project.urls]
Homepage = "https://github.com/wangleon/teilice"
Issues = "https://github.com/wangleon/teilice/issues"
